# pp-hgx55

./: go.work  go.work.sum
lexparse/: .gitignore  README.md  s  thoughts.txt
lexparse/code/: LexerErrorListener.java  Main.java  ParserErrorListener.java  SimpleLang.g4  SimpleLang.interp  SimpleLang.tokens  SimpleLangBaseListener.java  SimpleLangBaseVisitor.java  SimpleLangLexer.interp  SimpleLangLexer.java  SimpleLangListener.java  SimpleLangParser.java  SimpleLangVisitor.java  Visitor.java  lectureReference.txt  simple
lexparse/code/.antlr/: SimpleLang.interp  SimpleLang.tokens  SimpleLangLexer.interp  SimpleLangLexer.java  SimpleLangLexer.tokens  SimpleLangParser.java
lexparse/tests/: 0.prog  1.prog  10.prog  11.prog  12.prog  13.prog  14.prog  15.prog  16.prog  2.prog  3.prog  4.prog  5.prog  6.prog  7.prog  8.prog  9.prog
project/benchmark/: benchmark.sh  curl.sh  readme.md
project/benchmark/queries/: 1.cql  2.cql
project/client/: Client.py  cache.py  cli.py  readme.md  request.py  response.py  start.sh  temp.py  tkui.py
project/client/IO/: input.cql  stderr.txt
project/client/cache/: readme.md
project/client/lexparse/: .gitignore  CMakeLists.txt  Visitor.cpp  Visitor.h  compile.sh  main.cpp  readme.md  run.sh  s  test.sh
project/client/lexparse/.antlr/: TLexer.java  TParser.java
project/client/lexparse/antlr-runtime/: CMakeLists.txt
project/client/lexparse/antlr-runtime/demo/: CMakeLists.txt
project/client/lexparse/antlr-runtime/run/usr/local/share/: antlr4-demo
project/client/lexparse/cmake/: FindANTLR.cmake
project/client/lexparse/libs/: CypherBaseVisitor.cpp  CypherBaseVisitor.h  CypherLexer.cpp  CypherLexer.h  CypherParser.cpp  CypherParser.h  CypherVisitor.cpp  CypherVisitor.h
project/client/tests/: t2.cql  t3.cql  t4.cql  t5.cql  t6.cql  t7.cql  t8.cql  t9.cql
project/database/: .gitignore  cleanUp.sh  cs.py  cypherShell.py  cypherShell.sh  docker-compose.yml  errorDetect.py  neo4j.conf  out.txt  readme.md  setup.sh  start.py  start.sh
project/server/: go.mod  go.sum  initServer.ps1  initServer.sh  readme.md  runQuery.sh  start.sh
project/server/IO/: in.cql  (+1 more)
(+31 files in other folders)
